# hpsc-eclipse

./: README  eclipse_installer.sh
eclipse/: artifacts.xml  eclipse.ini
eclipse-workspace/.metadata/: version.ini
eclipse-workspace/hello_world_cortex-m/: .cproject  .project
eclipse-workspace/hpps_simple_addition/: .autotools  .cproject  .gdbinit  .project  INSTALL  README  configure.ac  hpps_simple_addition_gdb_aarch64-poky-linux.launch
eclipse-workspace/hpps_simple_addition/src/: Makefile.am
eclipse-workspace/simple_addition/: .autotools  .cproject  .gdbinit  .project  AUTHORS  INSTALL  README  configure.ac  simple_addition_gdb_aarch64-poky-linux.launch
eclipse-workspace/simple_addition/src/: Makefile.am  simple_addition.c
eclipse/configuration/: config.ini
eclipse/configuration/org.eclipse.core.runtime/: .contributions.3  .contributions.4  .contributors.3  .contributors.4  .extraData.3  .extraData.4  .mainData.3  .mainData.4  .namespaces.3  .namespaces.4  .orphans.3  .table.3  .table.4
eclipse/configuration/org.eclipse.equinox.simpleconfigurator/: bundles.info
eclipse/configuration/org.eclipse.osgi/: framework.info.33  framework.info.34  framework.info.35  framework.info.37  framework.info.39
eclipse/configuration/org.eclipse.update/: platform.xml
eclipse/features/ilg.gnumcueclipse.managedbuild.cross.arm.feature_2.6.4.201809300659/: feature.xml
eclipse/features/ilg.gnumcueclipse.managedbuild.cross.riscv.feature_2.8.2.201809300659/: feature.xml
eclipse/features/ilg.gnumcueclipse.templates.cortexm.feature_1.4.4.201809300659/: feature.xml
eclipse/features/org.eclipse.cdt.arduino_9.5.0.201806051032/: feature.xml
eclipse/features/org.eclipse.cdt.cmake_9.5.0.201806051032/: feature.xml
eclipse/p2/: pools.info  profiles.info
hpsc_baremetal_proj_files/: .cproject  .project
qemu_files/: bl31.elf  hpsc.dtb  linux-hpsc.dtb  u-boot.elf
sysroot/etc/: busybox.links.nosuid  hostname  issue  issue.net  ld.so.cache  rpmrc  timestamp  version
sysroot/lib/: libblkid.so.1.1.0  libgcc_s.so.1  libuuid.so.1.3.0  libz.so.1.2.11
sysroot/sbin/: bootlogd  fstab-decode  halt.sysvinit  init.sysvinit  killall5  ldconfig  runlevel.sysvinit  shutdown.sysvinit  udevd
(+202 files in other folders)
